--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -37,7 +37,7 @@
                 <a id="search" class="input-group-addon btn btn-search link">
                   <i class="fa fa-search text-color-marca"> </i>
                 </a>
-                <a data-permissions="true"  onclick="location.href='nueva_inspeccion.html';" class="permission_technical_group permission_advisory_group  fullaccess btn btn-primary pull-right"><i class="fa fa-plus"> </i> Agregar</a>
+                <a data-permissions="true"  onclick="location.href='new_inspection.html';" class="permission_technical_group permission_advisory_group  fullaccess btn btn-primary pull-right"><i class="fa fa-plus"> </i> Agregar</a>
               </div>
             </div>
             <div id="alertaLogin" class="text-center text-red"></div>
