--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -147,9 +147,9 @@
                                                     </div>
                                                     <label data-permissions="true" class="display permission_advisory_group inspection_price inspection_status_6 inspection_status_5 inspection_status_4 inspection_status_3 inspection_status_1 label label-default">$0,00</label>
 
-                                                    <label class="point_status_3 label display hide label-danger">Rechazado</label>
-                                                    <label class="point_status_2 label display hide label-success">Aceptado</label>
-                                                    <label class="point_status_4 label display hide label-info">Pospuesto</label>
+                                                    <label class="point_status_3 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-danger">Rechazado</label>
+                                                    <label class="point_status_2 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-success">Aceptado</label>
+                                                    <label class="point_status_4 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-info">Pospuesto</label>
                                                 </div>
                                                 <div class="btn-group shadow pull-right">
                                                     <button data-permissions="true" class="inspection_status_1 permission_technical_group btn btn-default capture-photo online-required" role="button">
@@ -196,6 +196,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="text-muted text-center">
+        <small class="muted text-cemter">Necesitas ayuda?</small><br>
+        <small class="muted text-cemter"><a class="text-muted " href="#">Preguntas frecuentes<a></small><br>
+        <small class="muted text-cemter"><a class="text-muted " href="mailto:soporte@avansys.com.mx">soporte@avansys.com.mx<a></small>
     </div>
   </body>
   <script type="text/javascript" src="js/jquery.js"></script>
