--- a/www/navbar.html
+++ b/www/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <h4 id="NavbarTitle" class="text-muted titulo  text-center"></h4>
   <div class="container-fluid">
-    <a class="navbar-link navbar-brand" href="dashboard.html"><i class="fa fa-arrow-circle-left"></i></a>
+    <a class="navbar-link navbar-brand" onclick="window.history.go(-1)"><i class="fa fa-arrow-circle-left"></i></a>
     <div class="navbar-header">
         <button type="button" class="navbar-link navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -10,23 +10,23 @@
             <span class="icon-bar"></span>
         </button>
         <div id="buttonmenu" name="buttonmenu" style="width: auto;height: 50px; text-align: right;padding-top:3px">
-            <a id="dbRefresh" class="navbar-link"><i class="fa fa-refresh"></i></a>
+            <a id="dbRefresh" class="navbar-link hide"><i class="fa fa-refresh"></i></a>
             <a id="netStatus" class="navbar-link"><i class="fa fa-wifi"></i></a>
         </div>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
             <li  class="hidden-sm hidden-md hidden-lg "><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio </a></li>
-            <li  class="hidden-sm hidden-md hidden-lg "><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
-            <li  class="hidden-sm hidden-md hidden-lg  fullaccess "><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
+            <li  class="hidden-sm hidden-md hidden-lg "><a class="navbar-link" href="clients.html"><i class="fa fa-user"></i> Clientes</a></li>
+            <li  class="hidden-sm hidden-md hidden-lg  fullaccess "><a class="navbar-link" href="new_inspection.html"><i class="fa fa-plus"></i> Inspección</a></li>
             <li data-permissions="true" class="hidden-sm  hidden-md hidden-lg permission_attach_budget fullaccess"><a data-permissions="true" data-screen="inspeccion.html" onclick="inspection.upload_pdf()"class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i>Salir</a></li>
             <li class="dropdown visible-sm visible-md visible-lg">
                 <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
                 <ul class="dropdown-menu">
                     <li><a href="dashboard.html" class="navbar-link"><i class="fa fa-home"></i> Inicio</a></li>
-                    <li><a class="navbar-link" href="clientes.html"><i class="fa fa-user"></i> Clientes</a></li>
-                    <li><a class="navbar-link" href="nueva_inspeccion.html"><i class="fa fa-plus"></i> Inspección</a></li>
+                    <li><a class="navbar-link" href="clients.html"><i class="fa fa-user"></i> Clientes</a></li>
+                    <li><a class="navbar-link" href="new_inspection.html"><i class="fa fa-plus"></i> Inspección</a></li>
                     <li data-permissions="true" class="permission_attach_budget  fullaccess"><a data-permissions="true" data-screen="inspeccion.html" onclick="inspection.upload_pdf()" class="navbar-link permission_attach_budget"><i class="fa fa-paperclip"></i> Presupuesto</a></li>
                     <li><a class="navbar-link" href="index.html"><i class="fa fa-sign-out"></i> Salir</a></li>
                 </ul>
@@ -35,4 +35,4 @@
     </div>
   </div>
 </nav>
-<div id="readonly-alert" style="z-index: 100; top:50px; position: absolute; width: 100%;" class="text-center alert alert-danger hide "><b>Readonly Access</b> Su cuenta ha expirado, activar licencia full access <a href="#">aqui</a> </div>
+<div id="readonly-alert" style="z-index: 100; top:50px; position: absolute; width: 100%;" class="text-center alert alert-danger hide "><b>Solo lectura:</b> Su cuenta ha expirado, contacte a su administrador</div>
