--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -93,5 +93,27 @@
 
       }, false);
      </script>
-  </body>
+        <script>
+            document.addEventListener("deviceready", ondeviceready, false);
+            function ondeviceready() {
+                alert("Device Ready....");
+            }
+            function PushNotification() {
+                cordova.plugins.notification.local.schedule({
+                    id: 1,
+                    title: "Push Notification",
+                    text: "This is first Push Notification."
+                });
+                
+                cordova.plugins.notification.local.schedule({
+                    id: 2,
+                    title: 'Design team meeting',
+                    trigger: { every: 'minute'}
+                });
+            }
+        </script>
+        <br/>
+        <br/>
+        <input type="button" value="Send a Push Notification" onclick="PushNotification();" />
+    </body>
 </html>
