--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
       document.addEventListener("deviceready", function(){
           dashboard(10, 0);
