--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -146,10 +146,11 @@
                                                         <input type="number" style="width: 100%; border: 1px solid #d9d9d9; height: 28px;" placeholder="Precio" class="update-price">
                                                     </div>
                                                     <label data-permissions="true" class="display permission_advisory_group inspection_price inspection_status_6 inspection_status_5 inspection_status_4 inspection_status_3 inspection_status_1 label label-default">$0,00</label>
-
-                                                    <label class="point_status_3 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-danger">Rechazado</label>
-                                                    <label class="point_status_2 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-success">Aceptado</label>
-                                                    <label class="point_status_4 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6 label display hide label-info">Pospuesto</label>
+                                                    <span class=" inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6">
+                                                        <label class="point_status_3 label display hide label-danger">Rechazado</label>
+                                                        <label class="point_status_2 label display hide label-success">Aceptado</label>
+                                                        <label class="point_status_4 label display hide label-info">Pospuesto</label>
+                                                    </span>
                                                 </div>
                                                 <div class="btn-group shadow pull-right">
                                                     <button data-permissions="true" class="inspection_status_1 permission_technical_group btn btn-default capture-photo online-required" role="button">
