--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -123,7 +123,7 @@
                                                 <span class="point_name capitalize"></span>
                                             </h4>
                                             <div class="btn-toolbar  severity-picker-toolbar" role="toolbar">
-                                                <div style="margin-left: 0px!important;" data-permissions="true" class="severity-picker permission_technical_group btn-group pull-left shadow inspection_status_1">
+                                                <div style="margin-left: 0px!important; float:left;" data-permissions="true" class="severity-picker permission_technical_group btn-group pull-left shadow inspection_status_1">
                                                     <button data-severity="1" data-class="btn-success" class="update-severity btn btn-link" role="button">
                                                         <i class="fa fa-check"> </i>
                                                     </button>
@@ -137,19 +137,18 @@
                                                         <i class="fa fa-ban"> </i>
                                                     </button>
                                                 </div>
-                                                <div class="pull-left">
+                                                <div class="pull-left" style="min-width: 50%;">
                                                     <button style="height: 22px; margin-right: 4px" class="status-point btn btn-success btn-sm">
                                                         <i class="fa fa-check"> </i>
                                                     </button>
-                                                    <div data-permissions="true" class="input-group permission_advisory_group inspection_status_2 hide " style="margin-left: 3px; border: 1px solid #aaa; border-radius: 3px; width: 30%; position: absolute; margin: -3px 40px;">
-                                                        <span class="input-group-addon">$</span>
-                                                        <input type="number" style="width: 100%; border: 1px solid #d9d9d9; height: 28px;" placeholder="Precio" class="update-price">
+                                                    <div data-permissions="true" class=" permission_advisory_group inspection_status_2 hide "  >
+                                                        <input type="number"style="float:left; margin-right: 4px; width:25%;height: 22px;"  placeholder="precio" class="update-price">
                                                     </div>
-                                                    <label data-permissions="true" class="display permission_advisory_group inspection_price inspection_status_6 inspection_status_5 inspection_status_4 inspection_status_3 inspection_status_1 label label-default">$0,00</label>
-                                                    <span class=" inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6">
-                                                        <label class="point_status_3 label display hide label-danger">Rechazado</label>
-                                                        <label class="point_status_2 label display hide label-success">Aceptado</label>
-                                                        <label class="point_status_4 label display hide label-info">Pospuesto</label>
+                                                    <label data-permissions="true"  style="float:left;width:40%" class="display permission_advisory_group inspection_price inspection_status_6 inspection_status_5 inspection_status_4 inspection_status_3 inspection_status_1 label label-default">$0,00</label>
+                                                    <span class=" inspection_status_1  inspection_status_2 inspection_status_3 inspection_status_4 inspection_status_5 inspection_status_6">
+                                                        <label style="float:left;width:50%"  class="point_status_3 label display hide label-danger">Rechazado</label>
+                                                        <label style="float:left;width:50%"  class="point_status_2 label display hide label-success">Aceptado</label>
+                                                        <label style="float:left;width:50%"  class="point_status_4 label display hide label-info">Pospuesto</label>
                                                     </span>
                                                 </div>
                                                 <div class="btn-group shadow pull-right">
