--- a/www/inspeccion.html
+++ b/www/inspeccion.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <h4>
-                    <img name="logo" id='logo' src="" width="70px">
+                    <a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a>
                     <span class="pull-right  text-muted text-center">
                         <i class="fa fa-user-circle"></i><br>
                         <small class="capitalize" id="user_name"></small>
